# howpay

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  DOCKERFILE  Dockerfile
backend/data/: assets.db
backend/src/: main.rs  sqlitetest.rs
frontend/: DOCKERFILE  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
