[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7" # 注意：目前稳定版大多用0.7，0.8还在开发中，如果你确实用0.8请保持，代码大体兼容
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
# 注意：这里开启了 runtime-tokio-rustls 和 sqlite
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }

# 辅助工具
tower-http = { version = "0.5", features = ["fs", "cors"] } # 开启 cors 支持跨域
uuid = { version = "1.8", features = ["v4", "serde"] } # 用于生成唯一ID